Fixed spacing in textarea and made it 'readonly'

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,6 @@ text-decoration: none;
 color: #fff;
 }
 a:-webkit-any-link:hover {
-before {content:"Reply!"};
 text-decoration: none;
 color: #a68ed2;
 }
@@ -100,16 +99,18 @@ color: #a68ed2;
     border-color: transparent;
 
 }
-.data-box {
+
+.data-box{
   border-radius: 4px;
   background-color: #fff;
   height:200px;
-  width: 400px;
+  width: 450px;
   max-height:600px;
-  max-width: 400px;
+  max-width: 450px;
   border:1px solid #ccc;
   overflow-x:hidden;
-font-size:13px;
+  font-size:13px;
+
 }
 form {
   -webkit-animation: fade 1s;
@@ -129,6 +130,7 @@ form {
   background-color: #6441a5;
   border-color: #CCC;
 }
+
 .panel-primary>.panel-heading+.panel-collapse>.panel-body {
 border-top-color: #000;
  }
